// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getGithubTokenByAuthArg.keyrackfail given: [case1] via-keyrack fails: locked (sealed after auto-unlock) when: [t0] keyrack stays locked then: surfaces the ✋ nudge with the keyrack-unlock fix 1`] = `
"✋ ConstraintError: github auth via keyrack failed: EHMPATH_BEAVER_GITHUB_TOKEN (status: locked)
  • unblock now — re-run as human: --auth as-human
  • or unlock the robot token: rhx keyrack unlock --owner ehmpath --key EHMPATH_BEAVER_GITHUB_TOKEN --env prep

{
  "status": "locked",
  "owner": "ehmpath",
  "env": "prep",
  "key": "EHMPATH_BEAVER_GITHUB_TOKEN",
  "keyrack": "🔒 locked: credential is locked"
}"
`;

exports[`getGithubTokenByAuthArg.keyrackfail given: [case2] via-keyrack fails: absent (never stored) when: [t0] keyrack returns absent then: surfaces the ✋ nudge with the keyrack-set fix 1`] = `
"✋ ConstraintError: github auth via keyrack failed: EHMPATH_BEAVER_GITHUB_TOKEN (status: absent)
  • unblock now — re-run as human: --auth as-human
  • or set the robot token: rhx keyrack set --owner ehmpath --key EHMPATH_BEAVER_GITHUB_TOKEN --env prep

{
  "owner": "ehmpath",
  "env": "prep",
  "key": "EHMPATH_BEAVER_GITHUB_TOKEN"
}"
`;

exports[`getGithubTokenByAuthArg.keyrackfail given: [case3] via-keyrack fails: blocked (firewall/policy) when: [t0] keyrack returns blocked then: surfaces the ✋ nudge with the keyrack-status inspect 1`] = `
"✋ ConstraintError: github auth via keyrack failed: EHMPATH_BEAVER_GITHUB_TOKEN (status: blocked)
  • unblock now — re-run as human: --auth as-human
  • or inspect the block: rhx keyrack status --owner ehmpath

{
  "status": "blocked",
  "owner": "ehmpath",
  "env": "prep",
  "key": "EHMPATH_BEAVER_GITHUB_TOKEN",
  "keyrack": "🚫 blocked: credential blocked by mechanism firewall"
}"
`;
